--- a/_posts/2021-01-20-MarkDown-Guide/MarkDown-Guide.Rmd
+++ b/_posts/2021-01-20-MarkDown-Guide/MarkDown-Guide.Rmd
@@ -6,7 +6,7 @@ author:
   - name: Jihun NAM
     url: https://github.com/jeerohoon
 date: 01-20-2021
-bibliography: test(covid).bib
+bibliography: covid.bib
 output:
   distill::distill_article:
     self_contained: false
@@ -117,7 +117,7 @@ To add a link to an image, enclose the Markdown for the image in brackets, and t
 
 Reference-style links are a special kind of link that make URLs easier to display and read in Markdown. Reference-style links are constructed in two parts: the part you keep inline with your text and the part you store somewhere else in the file to keep the text easy to read.
 
-In one example, researchers studied the covid 
-[@bastard_autoantibodies_2020].
+In one example, researchers studied the covid @bastardAutoantibodiesTypeIFNs2020.
+@covidCharacteristicsHealthCare2020
 
-##### References
+# References
