--- a/_posts/2021-01-20-Assignment1/Assignment1.Rmd
+++ b/_posts/2021-01-20-Assignment1/Assignment1.Rmd
@@ -5,7 +5,7 @@ description: |
   Description: Visualisation and analysis of MOM(Manpower Research and Statistics Department) Report on Labour Force in Singapore 2019
 author:
   - name: Jihun NAM
-  - jihun.nam.2020@mitb.sum.edu.sg
+  - email: jihun.nam.2020@mitb.sum.edu.sg
 
 date: 01-28-2021
 output:
