--- a/_posts/2021-02-19-Assignment2/Assignment2.Rmd
+++ b/_posts/2021-02-19-Assignment2/Assignment2.Rmd
@@ -401,10 +401,9 @@ The number of respondents are different among countries. Therefore, we cannot co
 
 ![](/Users/1109103/Google Drive/SMU_2021_1st/Visual/blog/_posts/2021-02-19-Assignment2/capture/D.10.png){width=70%}
 
-
 ## 5. Major observations 
 
-Labour force in Singapore is aging
+Labaging
 
 ### 5.1. Changes of the share of residents population
 - As illustrated in the statement in original chart, the share of senior population is getting larger than before. The share of residents aged 55-64 and 65&over rose from 14% (2009) to 17% (2019) and from 11% (2009) to 17%(2019), respectively. Whereas, the share of young age groups declined from 59% (2009) to 52% (2019). This fact affects to changes of the share of resident labour force consequently, because the working young population cohorts moving into the senior group. 
